--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                         <li class="drop-box">
                             <a href="#">Algorithms <span class="caret"></span></a>
                             <ul class="drop-menu">
-                                <li><a href="#">Depth-First-Search</a></li>
+                                <li><a href="#">Depth-First-Search-Recursive</a></li>
+                                <li><a href="#">Depth-First-Search-Iterative</a></li>
                                 <li class="active"><a href="#">Breadth-First-Search</a></li>
                                 <li><a href="#">Dijkstra</a></li>
                             </ul>
